translate libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -58,8 +58,7 @@ File Uploading 類別
 
 <h1>File Uploading 類別</h1>
 
-<p>CodeIgniter's File Uploading 類別 permits files to be uploaded.  You can set various
-preferences，restricting the type and size of the files.</p>
+<p>CodeIgniter 的檔案上傳類允許檔案被上傳。您可以指定上傳某類型的檔案及指定大小的文件。</p>
 
 
 <h2>The Process</h2>
