translate libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -61,9 +61,9 @@ File Uploading 類別
 <p>CodeIgniter 的檔案上傳類允許檔案被上傳。您可以指定上傳某類型的檔案及指定大小的文件。</p>
 
 
-<h2>The Process</h2>
+<h2>處理過程</h2>
 
-<p>Uploading a file involves the following general process:</p>
+<p>上傳檔案普遍過程：</p>
 
 
 <ul>
