translate libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -67,10 +67,10 @@ File Uploading 類別
 
 
 <ul>
-<li>An upload form is displayed，allowing a user to select a file and upload it.</li>
-<li>When the form is submitted，the file is uploaded to the destination you specify.</li>
-<li>Along the way，the file is validated to make sure it is allowed to be uploaded based on the preferences you set.</li>
-<li>Once uploaded，the user will be shown a success message.</li>
+<li>一個檔案上傳表單，允許使用者選擇一個檔案並上傳它。</li>
+<li>當表單被送出，該檔案會被上傳到指定的目錄。</li>
+<li>同時，該檔案將被驗證是否符合您設定的要求。</li>
+<li>一旦文件上傳成功，使用者就會看到上傳成功訊息。</li>
 </ul>
 
 <p>To demonstrate this process here is brief tutorial. Afterward you'll find reference information.</p>
