translate libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -79,7 +79,7 @@ File Uploading 類別
 
 
 
-<p>Using a text editor，create a form called <dfn>upload_form.php</dfn>.  In it，place this code and save it to your <samp>applications/views/</samp>
+<p>使用文字編輯器建立一個表單，該表單命名為 <dfn>upload_form.php</dfn>.  In it，place this code and save it to your <samp>applications/views/</samp>
 folder:</p>
 
 
