--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -79,8 +79,7 @@ File Uploading 類別
 
 
 
-<p>使用文字編輯器建立一個表單，該表單命名為 <dfn>upload_form.php</dfn>.  In it，place this code and save it to your <samp>applications/views/</samp>
-folder:</p>
+<p>使用文字編輯器建立一個表單，該表單命名為 <dfn>upload_form.php</dfn>。將底下程式碼寫入檔案，並且另存到您的 <samp>applications/views/</samp> 資料夾：</p>
 
 
 <textarea class="textarea" style="width:100%" cols="50" rows="23">
