--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -109,10 +109,9 @@ creates the proper syntax for you.  You'll also notice we have an $error variabl
 the user does something wrong.</p>
 
 
-<h2>The Success Page</h2>
+<h2>上傳成功的頁面</h2>
 
-<p>Using a text editor，create a form called <dfn>upload_success.php</dfn>.
-In it，place this code and save it to your <samp>applications/views/</samp> folder:</p>
+<p>運用文本編輯器創建一個名為 <dfn>upload_success.php</dfn> 的文件。複製以下代碼保存到 <samp>applications/views/</samp> 目錄裡：</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="20">&lt;html>
 &lt;head>
