translate some content of libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -188,22 +188,21 @@ class Upload extends Controller {
 <dfn>uploads</dfn> and set its file permissions to 777.</p>
 
 
-<h2>Try it!</h2>
+<h2>重送表單</h2>
 
-<p>To try your form，visit your site using a URL similar to this one:</p>
+<p>要傳送表單，輸入類似如下的URL：</p>
 
 <code>example.com/index.php/<var>upload</var>/</code>
 
-<p>You should see an upload form. Try uploading an image file (either a jpg，gif，or png). If the path in your
-controller is correct it should work.</p>
+<p>你將看到一個上傳表單，任選一張(jpg, gif,或者png)圖片進行上傳. 如果你在控制器裡設定的路徑是正確的，它將開始進行上傳工作。</p>
 
 
 <p>&nbsp;</p>
 
-<h1>Reference Guide</h1>
+<h1>參考指南</h1>
 
 
-<h2>Initializing the Upload 類別</h2>
+<h2>初始化文件上傳類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Upload class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
