--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -79,7 +79,7 @@ File Uploading 類別
 
 
 
-<p>利用文字編輯器建立一個名為 <dfn>upload_form.php</dfn>。將底下程式碼寫入檔案，並且另存到您的 <samp>applications/views/</samp> 資料夾：</p>
+<p>使用文字編輯器建立一個表單，該表單命名為 <dfn>upload_form.php</dfn>。將底下程式碼寫入檔案，並且另存到您的 <samp>applications/views/</samp> 資料夾：</p>
 
 
 <textarea class="textarea" style="width:100%" cols="50" rows="23">
@@ -109,9 +109,10 @@ creates the proper syntax for you.  You'll also notice we have an $error variabl
 the user does something wrong.</p>
 
 
-<h2>上傳成功的頁面</h2>
+<h2>The Success Page</h2>
 
-<p>利用文字編輯器建立一個名為 <dfn>upload_success.php</dfn> 的檔案。複製以下程式碼另存到 <samp>applications/views/</samp> 目錄裡：</p>
+<p>Using a text editor，create a form called <dfn>upload_success.php</dfn>.
+In it，place this code and save it to your <samp>applications/views/</samp> folder:</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="20">&lt;html>
 &lt;head>
@@ -133,9 +134,10 @@ the user does something wrong.</p>
 &lt;/html></textarea>
 
 
-<h2>控制器</h2>
+<h2>The Controller</h2>
 
-<p>利用文字編輯器建立一個名為 <dfn>upload.php</dfn> 的檔案。複製以下程式碼另存到 <samp>applications/controllers/</samp> 目錄裡:</p>
+<p>Using a text editor，create a controller called <dfn>upload.php</dfn>.  In it，place this code and save it to your <samp>applications/controllers/</samp>
+folder:</p>
 
 
 <textarea class="textarea" style="width:100%" cols="50" rows="43">&lt;?php
@@ -180,9 +182,10 @@ class Upload extends Controller {
 ?&gt;</textarea>
 
 
-<h2>上傳目錄</h2>
+<h2>The Upload Folder</h2>
 
-<p>你還需要一個目錄存儲上傳的圖片。在根目錄上建立一個名稱為 <dfn>uploads</dfn> 的目錄並設置該目錄的屬性為 777。（即可讀寫）</p>
+<p>You'll need a destination folder for your uploaded images.  Create a folder at the root of your CodeIgniter installation called
+<dfn>uploads</dfn> and set its file permissions to 777.</p>
 
 
 <h2>重送表單</h2>
@@ -201,16 +204,15 @@ class Upload extends Controller {
 
 <h2>初始化文件上傳類別</h2>
 
-<p>Like most other classes in CodeIgniter，the Upload class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
+<p>與 CodeIgniter 的其它一些類別相似，檔案上傳類別用 <dfn>$this->load->library</dfn> 函數在控制器裡進行初始化：</p>
 
 <code>$this->load->library('upload');</code>
-<p>Once the Upload class is loaded，the object will be available using: <dfn>$this->upload</dfn></p>
+<p>一旦檔案上傳類別被載入，物件用底下方法來引用：<dfn>$this->upload</dfn></p>
 
 
-<h2>Setting Preferences</h2>
+<h2>偏好設定</h2>
 
-<p>Similar to other libraries，you'll control what is allowed to be upload based on your preferences.  In the controller you
-built above you set the following preferences:</p>
+<p>就如同其他類別一樣，您將根據您的偏好設定來控制要被上傳的檔案，在控制器裡，你建立了如下的偏好設定：</p>
 
 <code>$config['upload_path'] = './uploads/';<br />
 $config['allowed_types'] = 'gif|jpg|png';<br />
