translate setting of libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -242,14 +242,14 @@ $this->upload->initialize($config);</code>
 <td class="td"><strong>upload_path</strong></td>
 <td class="td">None</td>
 <td class="td">None</td>
-<td class="td">The path to the folder where the upload should be placed.  The folder must be writable and the path can be absolute or relative.</td>
+<td class="td">檔案目錄上傳路徑，此目錄必須可以寫入，路徑可以是絕對或者是相對。</td>
 </tr>
 
 <tr>
 <td class="td"><strong>allowed_types</strong></td>
 <td class="td">None</td>
 <td class="td">None</td>
-<td class="td">The mime types corresponding to the types of files you allow to be uploaded.  Usually the file extension can be used as the mime type.  Separate multiple types with a pipe.</td>
+<td class="td">允許上傳文件的 MIME 類型；通常檔案副檔名可以做為 MIME 類型. 允許多個類型用豎線『|』分開。</td>
 </tr>
 
 
