translate libraries/file_uploading.html

--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -271,21 +271,21 @@ $this->upload->initialize($config);</code>
 <td class="td"><strong>max_width</strong></td>
 <td class="td">0</td>
 <td class="td">None</td>
-<td class="td">The maximum width (in pixels) that the file can be.  Set to zero for no limit.</td>
+<td class="td">上傳圖片的寬度最大值（像素為單位）。0為不限制。</td>
 </tr>
 
 <tr>
 <td class="td"><strong>max_height</strong></td>
 <td class="td">0</td>
 <td class="td">None</td>
-<td class="td">The maximum height (in pixels) that the file can be.  Set to zero for no limit.</td>
+<td class="td">上傳文件的高度最大值（像素為單位）。0為不限制。</td>
 </tr>
 
 <tr>
 <td class="td"><strong>max_filename</strong></td>
 <td class="td">0</td>
 <td class="td">None</td>
-<td class="td">The maximum length that a file name can be.  Set to zero for no limit.</td>
+<td class="td">檔案名稱的最大長度。0為不限制。</td>
 </tr>
 
 <tr>
