--- a/libraries/file_uploading.html
+++ b/libraries/file_uploading.html
@@ -271,7 +271,7 @@ $this->upload->initialize($config);</code>
 <td class="td"><strong>max_width</strong></td>
 <td class="td">0</td>
 <td class="td">None</td>
-<td class="td">The maximum width (in pixels) that the file can be.  Set to zero for no limit.</td>
+<td class="td">The maximum width (in 像素為單位) that the file can be.  Set to zero for no limit.</td>
 </tr>
 
 <tr>
