--- a/libraries/form_validation.html
+++ b/libraries/form_validation.html
@@ -41,7 +41,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Form Validation
+表單驗證
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -54,7 +54,7 @@ Form Validation
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Form Validation</h1>
+<h1>表單驗證</h1>
 
 <p>CodeIgniter provides a comprehensive form validation and data prepping class that helps minimize the amount of code you'll write.</p>
 
@@ -62,15 +62,15 @@ Form Validation
 have left the old class in the library so applications currently using it will not break，but you are encouraged to migrate to this new version.</p>
 
 <ul>
-<li><a href="#overview">Overview</a></li>
-<li><a href="#tutorial">Form Validation Tutorial</a>
+<li><a href="#overview">概述</a></li>
+<li><a href="#tutorial">表單驗證手冊</a>
 
 	<ul>
-		<li><a href="#theform">The Form</a></li>
-		<li><a href="#thesuccesspage">The Success Page</a></li>
-		<li><a href="#thecontroller">The Controller</a></li>
-		<li><a href="#validationrules">Setting Validation Rules</a></li>
-		<li><a href="#validationrulesasarray">Setting Validation Rules Using an Array</a></li>
+		<li><a href="#theform">表單</a></li>
+		<li><a href="#thesuccesspage">成功頁面</a></li>
+		<li><a href="#thecontroller">控制器 (Controller)</a></li>
+		<li><a href="#validationrules">設定驗證規則</a></li>
+		<li><a href="#validationrulesasarray">利用陣列設定驗證規則</a></li>
 		<li><a href="#cascadingrules">Cascading Rules</a></li>
 		<li><a href="#preppingdata">Prepping Data</a></li>
 		<li><a href="#repopulatingform">Re-populating the Form</a></li>
