--- a/libraries/zip.html
+++ b/libraries/zip.html
@@ -136,8 +136,7 @@ $this->zip->add_data($name，$data);
 
 <h2>$this->zip->add_dir()</h2>
 
-<p>Permits you to add a directory.  Usually this function is unnecessary since you can place your data into folders when
-using <dfn>$this->zip->add_data()</dfn>，but if you would like to create an empty folder you can do so.  參考範例:</p>
+<p>允許您新增一個目錄，通常這個函數不是必須的，因為當你使用 <dfn>$this->zip->add_data()</dfn>，可以把你的數據放進目錄裡，但是如果你想要創建一個空目錄的話你也可以這樣做。參考範例：</p>
 
 <code>$this->zip->add_dir('myfolder'); // Creates a folder called "myfolder"</code>
 
@@ -145,8 +144,7 @@ using <dfn>$this->zip->add_data()</dfn>，but if you would like to create an emp
 
 <h2>$this->zip->read_file()</h2>
 
-<p>Permits you to compress a file that already exists somewhere on your server.  Supply a file path and the zip class will
-read it and add it to the archive:</p>
+<p>允許您壓縮一個存在您電腦裡面的檔案，請提供檔案路徑，函數會去讀取該檔案，並且增加到壓縮檔案裡：</p>
 
 <code>
 $path = '/path/to/photo.jpg';<br /><br />
@@ -156,8 +154,7 @@ $this->zip->read_file($path);
 $this->zip->download('my_backup.zip');
 </code>
 
-<p>If you would like the Zip archive to maintain the directory structure of the file in it，pass <kbd>TRUE</kbd> (boolean) in the
-second parameter.  參考範例:</p>
+<p>假如您想要此壓縮檔案保留原本的目錄架構，請將第二個參數設定為 <kbd>TRYE</kbd>，參考範例：</p>
 
 
 <code>
@@ -168,15 +165,13 @@ $this->zip->read_file($path，<kbd>TRUE</kbd>);
 $this->zip->download('my_backup.zip');
 </code>
 
-<p>In the above example，<dfn>photo.jpg</dfn> will be placed inside two folders:  <kbd>path/to/</kbd></p>
+<p>從上面例子發現 <dfn>photo.jpg</dfn> 將會被放到兩層目錄底下：<kbd>path/to/</kbd></p>
 
 
 
 <h2>$this->zip->read_dir()</h2>
 
-<p>Permits you to compress a folder (and its contents) that already exists somewhere on your server.  Supply a file path to the 
-directory and the zip class will recursively read it and recreate it as a Zip archive.  All files contained within the
-supplied path will be encoded，as will any sub-folders contained within it.  參考範例:</p>
+<p>允許您壓縮一個存在您電腦裡面的目錄，請提供該目錄路徑讓函數可以遞迴讀取該目錄底下子目錄，所有的檔案以及該目錄底下子目錄都會被加入到壓縮檔案，參考範例:</p>
 
 <code>
 $path = '/path/to/your/directory/';<br /><br />
@@ -191,27 +186,23 @@ $this->zip->download('my_backup.zip');
 
 <h2>$this->zip->archive()</h2>
 
-<p>Writes the Zip-encoded file to a directory on your server.  Submit a valid server path ending in the file name.  Make sure the
-directory is writable (666 or 777 is usually OK). 參考範例:</p>
+<p>將 ZIP 壓縮檔案放入到您電腦指定目錄，請提供一個正確目錄路徑，確保該目錄是可以寫入的(666 或 777 通常都是可以的)，參考範例:</p>
 
 <code>$this->zip->archive('/path/to/folder/myarchive.zip'); // Creates a file named myarchive.zip</code>
 
 
 <h2>$this->zip->download()</h2>
 
-<p>Causes the Zip file to be downloaded from your server. The function must be passed the name you would like the zip file called.
-參考範例:</p>
+<p>此函數必須提供您想要的檔案名稱，以便從您電腦下載壓縮檔案，參考範例:</p>
 
 <code>$this->zip->download('latest_stuff.zip'); // File will be named "latest_stuff.zip"</code>
 
-<p class="important"><strong>注意:</strong>&nbsp; Do not display any data in the controller in which you call this function since it sends various server headers
-that cause the download to happen and the file to be treated as binary.</p>
+<p class="important"><strong>注意:</strong>&nbsp; 當使用此函數時，請不要在控制器裡面加入任何輸出文字或者是 html 語法，以便可以讓檔案以二進制方式下載。</p>
 
 
 <h2>$this->zip->get_zip()</h2>
 
-<p>Returns the Zip-compressed file data.  Generally you will not need this function unless you want to do something unique with the data.
-參考範例:</p>
+<p>回傳經過 Zip 壓縮後的檔案。通常情況下你不需要用到本函數，除非你想對檔案做特殊處理。參考範例:</p>
 
 <code>
 $name = 'my_bio.txt';<br />
@@ -225,8 +216,7 @@ $zip_file = $this->zip->get_zip();
 
 <h2>$this->zip->clear_data()</h2>
 
-<p>The Zip class caches your zip data so that it doesn't need to recompile the Zip archive for each function you use above.
-If，however，you need to create multiple Zips，each with different data，you can clear the cache between calls. 參考範例:</p>
+<p>Zip 類別會對你的 zip 資料進行暫存，所以您在使用上面函數都不需要在重新宣告，然而如果要建立多個不同內容的 ZIP 檔案，您就必須清除暫存檔案，參考範例：</p>
 
 <code>
 $name = 'my_bio.txt';<br />
@@ -268,7 +258,7 @@ $this->zip->download('myphotos.zip');
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 下個主題:&nbsp;&nbsp;<a href="../helpers/array_helper.html">Array 補助函數</a>
 </p>
-<p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
+<p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2010 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
 <script type="text/javascript">
