--- a/helpers/download_helper.html
+++ b/helpers/download_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Download 補助函數 : CodeIgniter 使用手冊</title>
+<title>Download 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -43,7 +43,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Download 補助函數
+Download 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -57,12 +57,12 @@ Download 補助函數
 <div id="content">
 
 
-<h1>Download 補助函數</h1>
+<h1>Download 輔助函數</h1>
 
-<p>下載補助函數讓您下載資料到您的電腦桌面。</p>
+<p>下載輔助函數讓您下載資料到您的電腦桌面。</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入 輔助函數</h2>
 
 <p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('download');</code>
@@ -98,11 +98,11 @@ force_download($name，$data);
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="directory_helper.html">Directory 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="directory_helper.html">Directory 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="email_helper.html">Email 補助函數</a></p>
+下個主題:&nbsp;&nbsp;<a href="email_helper.html">Email 輔助函數</a></p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
