--- a/helpers/form_helper.html
+++ b/helpers/form_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Form 補助函數 : CodeIgniter 使用手冊</title>
+<title>Form 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Form 補助函數
+Form 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,12 +56,12 @@ Form 補助函數
 <div id="content">
 
 
-<h1>Form 補助函數</h1>
+<h1>Form 輔助函數</h1>
 
-<p>The Form 補助函數 file contains functions that assist in working with forms.</p>
+<p>The Form 輔助函數 file contains functions that assist in working with forms.</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入 輔助函數</h2>
 
 <p>This helper is loaded using the following code:</p>
 <code>$this->load->helper('form');</code>
@@ -407,7 +407,7 @@ The form_prep function converts HTML so that it can be used safely:</p>
 
 <code>&lt;input type="text" name="myform" value="<var>&lt;?php echo form_prep($string); ?></var>" /></code>
 
-<p class="important"><strong>注意:</strong> If you use any of the form 補助函數 listed in this page the form
+<p class="important"><strong>注意:</strong> If you use any of the form 輔助函數 listed in this page the form
 values will be prepped automatically，so there is no need to call this function. Use it only if you are
 creating your own form elements.</p>
 
@@ -463,11 +463,11 @@ must contain the name of the checkbox，the second parameter must contain its va
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="file_helper.html">File 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="file_helper.html">File 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="html_helper.html">HTML 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="html_helper.html">HTML 輔助函數</a>
 </p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
