--- a/helpers/typography_helper.html
+++ b/helpers/typography_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Typography 補助函數 : CodeIgniter 使用手冊</title>
+<title>Typography 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Typography 補助函數
+Typography 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,14 +56,14 @@ Typography 補助函數
 <div id="content">
 
 
-<h1>Typography 補助函數</h1>
+<h1>Typography 輔助函數</h1>
 
-<p>Typography 補助函數的檔案裡，其中所包含的函數可以協助你的格式文件(formats text)使用語意相關的方式。</p>
+<p>Typography 輔助函數的檔案裡，其中所包含的函數可以協助你的格式文件(formats text)使用語意相關的方式。</p>
 
 
-<h2>載入補助函數</h2>
+<h2>載入輔助函數</h2>
 
-<p>補助函數載入方式的程式碼:</p>
+<p>輔助函數載入方式的程式碼:</p>
 <code>$this->load->helper('typography');</code>
 
 <p>下列的函數則可以使用:</p>
@@ -96,11 +96,11 @@ Typography 補助函數
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="text_helper.html">Text 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="text_helper.html">Text 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="url_helper.html">URL 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="url_helper.html">URL 輔助函數</a>
 </p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
