--- a/helpers/url_helper.html
+++ b/helpers/url_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>URL 補助函數 : CodeIgniter 使用手冊</title>
+<title>URL 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -41,7 +41,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-URL 補助函數
+URL 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,14 +55,14 @@ URL 補助函數
 <div id="content">
 
 
-<h1>URL 補助函數</h1>
+<h1>URL 輔助函數</h1>
 
-<p>URL 補助函數用來處理包含網址的資料內容。</p>
+<p>URL 輔助函數用來處理包含網址的資料內容。</p>
 
 
-<h2>載入 URL 補助函數</h2>
+<h2>載入 URL 輔助函數</h2>
 
-<p>使用下列的程式碼載入此補助函數( 說明器 )：</p>
+<p>使用下列的程式碼載入此輔助函數( 說明器 )：</p>
 <code>$this->load->helper('url');</code>
 
 <p>下列為可以使用的函數：</p>
@@ -262,11 +262,11 @@ redirect('/article/13'，'location'，301);</code>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="typography_helper.html">Typography 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="typography_helper.html">Typography 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="xml_helper.html">XML 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="xml_helper.html">XML 輔助函數</a>
 </p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
