--- a/helpers/xml_helper.html
+++ b/helpers/xml_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>XML 補助函數 : CodeIgniter 使用手冊</title>
+<title>XML 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-XML 補助函數
+XML 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,14 +56,14 @@ XML 補助函數
 <div id="content">
 
 
-<h1>XML 補助函數</h1>
+<h1>XML 輔助函數</h1>
 
-<p>XML 補助函數裡所包含的函數是用來處理 XML 資料。</p>
+<p>XML 輔助函數裡所包含的函數是用來處理 XML 資料。</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入 輔助函數</h2>
 
-<p>載入補助函數所使用的程式碼:</p>
+<p>載入輔助函數所使用的程式碼:</p>
 <code>$this->load->helper('xml');</code>
 
 <p>底下的函數就可以使用了:</p>
@@ -88,7 +88,7 @@ Ampersands: &amp;<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="url_helper.html">URL 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="url_helper.html">URL 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>
