--- a/toc.html
+++ b/toc.html
@@ -99,7 +99,7 @@
 	<li><a href="general/reserved_names.html">保留字</a></li>
 	<li><a href="./general/views.html">檢視(Views)</a></li>
 	<li><a href="./general/models.html">模型(Models)</a></li>
-	<li><a href="./general/helpers.html">補助函數(Helpers)</a></li>
+	<li><a href="./general/helpers.html">輔助函數(Helpers)</a></li>
 	<li><a href="./general/plugins.html">外掛模組(Plugins)</a></li>
 	<li><a href="./general/libraries.html">使用 CodeIgniter 程式庫</a></li>
 	<li><a href="./general/creating_libraries.html">建立自己的程式庫</a></li>
@@ -158,27 +158,27 @@
 
 <h3>補助函式參考</h3>
 <ul>
-<li><a href="./helpers/array_helper.html">Array 補助函數</a></li>
-<li><a href="./helpers/compatibility_helper.html">Compatibility 補助函數</a></li>
-<li><a href="./helpers/cookie_helper.html">Cookie 補助函數</a></li>
-<li><a href="./helpers/date_helper.html">Date 補助函數</a></li>
-<li><a href="./helpers/directory_helper.html">Directory 補助函數</a></li>
-<li><a href="./helpers/download_helper.html">Download 補助函數</a></li>
-<li><a href="./helpers/email_helper.html">Email 補助函數</a></li>
-<li><a href="./helpers/file_helper.html">File 補助函數</a></li>
-<li><a href="./helpers/form_helper.html">Form 補助函數</a></li>
-<li><a href="./helpers/html_helper.html">HTML 補助函數</a></li>
-<li><a href="./helpers/inflector_helper.html">Inflector 補助函數</a></li>
-<li><a href="./helpers/language_helper.html">Language 補助函數</a></li>
-<li><a href="./helpers/number_helper.html">Number 補助函數</a></li>
-<li><a href="./helpers/path_helper.html">Path 補助函數</a></li>
-<li><a href="./helpers/security_helper.html">Security 補助函數</a></li>
-<li><a href="./helpers/smiley_helper.html">Smiley 補助函數</a></li>
-<li><a href="./helpers/string_helper.html">String 補助函數</a></li>
-<li><a href="./helpers/text_helper.html">Text 補助函數</a></li>
-<li><a href="./helpers/typography_helper.html">Typography 補助函數</a></li>
-<li><a href="./helpers/url_helper.html">URL 補助函數</a></li>
-<li><a href="./helpers/xml_helper.html">XML 補助函數</a></li>
+<li><a href="./helpers/array_helper.html">Array 輔助函數</a></li>
+<li><a href="./helpers/compatibility_helper.html">Compatibility 輔助函數</a></li>
+<li><a href="./helpers/cookie_helper.html">Cookie 輔助函數</a></li>
+<li><a href="./helpers/date_helper.html">Date 輔助函數</a></li>
+<li><a href="./helpers/directory_helper.html">Directory 輔助函數</a></li>
+<li><a href="./helpers/download_helper.html">Download 輔助函數</a></li>
+<li><a href="./helpers/email_helper.html">Email 輔助函數</a></li>
+<li><a href="./helpers/file_helper.html">File 輔助函數</a></li>
+<li><a href="./helpers/form_helper.html">Form 輔助函數</a></li>
+<li><a href="./helpers/html_helper.html">HTML 輔助函數</a></li>
+<li><a href="./helpers/inflector_helper.html">Inflector 輔助函數</a></li>
+<li><a href="./helpers/language_helper.html">Language 輔助函數</a></li>
+<li><a href="./helpers/number_helper.html">Number 輔助函數</a></li>
+<li><a href="./helpers/path_helper.html">Path 輔助函數</a></li>
+<li><a href="./helpers/security_helper.html">Security 輔助函數</a></li>
+<li><a href="./helpers/smiley_helper.html">Smiley 輔助函數</a></li>
+<li><a href="./helpers/string_helper.html">String 輔助函數</a></li>
+<li><a href="./helpers/text_helper.html">Text 輔助函數</a></li>
+<li><a href="./helpers/typography_helper.html">Typography 輔助函數</a></li>
+<li><a href="./helpers/url_helper.html">URL 輔助函數</a></li>
+<li><a href="./helpers/xml_helper.html">XML 輔助函數</a></li>
 </ul>
 
 <h3>更多資源</h3>
