--- a/helpers/email_helper.html
+++ b/helpers/email_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Email 補助函數 : CodeIgniter 使用手冊</title>
+<title>Email 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -43,7 +43,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Email 補助函數
+Email 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -57,11 +57,11 @@ Email 補助函數
 <div id="content">
 
 
-<h1>Email 補助函數</h1>
+<h1>Email 輔助函數</h1>
 
-<p>Email補助函數提供一些使用於電子郵件相關操作的函數。若要瞭解更多的電子郵件解決方案，請參閱 CodeIgniter 的 <a href="../libraries/email.html">Email 類別</a>。</p>
+<p>Email輔助函數提供一些使用於電子郵件相關操作的函數。若要瞭解更多的電子郵件解決方案，請參閱 CodeIgniter 的 <a href="../libraries/email.html">Email 類別</a>。</p>
 
-<h2>載入補助函數</h2>
+<h2>載入輔助函數</h2>
 
 <p>使用下列的程式碼載入補助程式：</p>
 <p><code>$this->load->helper('email');</code></p>
@@ -90,11 +90,11 @@ else<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="download_helper.html">Download 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="download_helper.html">Download 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="file_helper.html">File 補助函數</a></p>
+下個主題:&nbsp;&nbsp;<a href="file_helper.html">File 輔助函數</a></p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
