--- a/helpers/html_helper.html
+++ b/helpers/html_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HTML 補助函數 : CodeIgniter 使用手冊</title>
+<title>HTML 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-HTML 補助函數
+HTML 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,14 +56,14 @@ HTML 補助函數
 <div id="content">
 
 
-<h1>HTML 補助函數</h1>
+<h1>HTML 輔助函數</h1>
 
-<p>HTML 補助函數提供一些輔助 html 操作的相關函數</p>
+<p>HTML 輔助函數提供一些輔助 html 操作的相關函數</p>
 
 
-<h2>載入補助函數</h2>
+<h2>載入輔助函數</h2>
 
-<p>補助函數使用下列方式載入：</p>
+<p>輔助函數使用下列方式載入：</p>
 <code>$this->load->helper('html');</code>
 
 <p>可用函數如下所示：</p>
@@ -360,11 +360,11 @@ echo doctype('html4-trans');<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="form_helper.html">Form 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="form_helper.html">Form 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="path_helper.html"> Path 補助函數</a></p>
+下個主題:&nbsp;&nbsp;<a href="path_helper.html"> Path 輔助函數</a></p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
