--- a/helpers/inflector_helper.html
+++ b/helpers/inflector_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Inflector 補助函數 : CodeIgniter 使用手冊</title>
+<title>Inflector 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Inflector 補助函數
+Inflector 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,12 +56,12 @@ Inflector 補助函數
 <div id="content">
 
 
-<h1>Inflector 補助函數</h1>
+<h1>Inflector 輔助函數</h1>
 
-<p>Inflector 補助函數檔包含允許您將單字換成複數、單數，駱駝拼寫法等形式的函數。</p>
+<p>Inflector 輔助函數檔包含允許您將單字換成複數、單數，駱駝拼寫法等形式的函數。</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入 輔助函數</h2>
 
 <p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('inflector');</code>
@@ -138,11 +138,11 @@ echo humanize($word); // Returns "My Dog Spot"
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="html_helper.html"> HTML 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="html_helper.html"> HTML 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="number_helper.html">Number 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="number_helper.html">Number 輔助函數</a>
 </p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
