--- a/helpers/number_helper.html
+++ b/helpers/number_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Number 補助函數 : CodeIgniter 使用手冊</title>
+<title>Number 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Number 補助函數
+Number 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,12 +56,12 @@ Number 補助函數
 <div id="content">
 
 
-<h1>Number 補助函數</h1>
+<h1>Number 輔助函數</h1>
 
-<p>數字補助函數檔案包含幫助您處理數字資料。</p>
+<p>數字輔助函數檔案包含幫助您處理數字資料。</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入 輔助函數</h2>
 
 <p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('number');</code>
@@ -94,11 +94,11 @@ echo byte_format(123456789123456789); // Returns 11,228.3 TB
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="inflector_helper.html">Inflector 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="inflector_helper.html">Inflector 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="path_helper.html">Path 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="path_helper.html">Path 輔助函數</a>
 </p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
