--- a/helpers/security_helper.html
+++ b/helpers/security_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Security 補助函數 : CodeIgniter 使用手冊</title>
+<title>Security 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Security 補助函數
+Security 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,13 +56,13 @@ Security 補助函數
 <div id="content">
 
 
-<h1>Security 補助函數</h1>
+<h1>Security 輔助函數</h1>
 
-<p>Security 補助函數的檔案包含安全相關的函數。</p>
+<p>Security 輔助函數的檔案包含安全相關的函數。</p>
 
-<h2>載入補助函數</h2>
+<h2>載入輔助函數</h2>
 
-<p>載入補助函數使用下列的程式碼:</p>
+<p>載入輔助函數使用下列的程式碼:</p>
 <code>$this->load->helper('security');</code>
 
 <p>底下的函數就可以開始使用:</p>
@@ -113,11 +113,11 @@ $str = dohash($str，'md5'); // MD5
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="path_helper.html"> Path 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="path_helper.html"> Path 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="smiley_helper.html">Smiley 補助函數</a></p>
+下個主題:&nbsp;&nbsp;<a href="smiley_helper.html">Smiley 輔助函數</a></p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
