--- a/helpers/smiley_helper.html
+++ b/helpers/smiley_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Smiley 補助函數 : CodeIgniter 使用手冊</title>
+<title>Smiley 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://ci.wuboy.twbbs.org/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Smiley 補助函數
+Smiley 輔助函數
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="ci.wuboy.twbbs.org/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,12 +56,12 @@ Smiley 補助函數
 <div id="content">
 
 
-<h1>Smiley 補助函數</h1>
+<h1>Smiley 輔助函數</h1>
 
-<p>The Smiley 補助函數 file contains functions that let you manage smileys (emoticons).</p>
+<p>The Smiley 輔助函數 file contains functions that let you manage smileys (emoticons).</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入 輔助函數</h2>
 
 <p>This helper is loaded using the following code:</p>
 <code>$this->load->helper('smiley');</code>
@@ -191,11 +191,11 @@ echo $str;
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="security_helper.html">Security 補助函數</a>
+上個主題:&nbsp;&nbsp;<a href="security_helper.html">Security 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="string_helper.html">String 補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="string_helper.html">String 輔助函數</a>
 </p>
 <p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
