--- a/helpers/file_helper.html
+++ b/helpers/file_helper.html
@@ -75,20 +75,20 @@ File 輔助函數
 
 <p>檔案路徑可以是絕對路徑或者是相關路徑。如果開檔失敗則回傳錯誤(boolean False)。</p>
 
-<p class="important"><strong>注意:</strong> 檔案路徑是相關於網站根目錄 index.php 檔案，而不是相關路徑於您的控制器(controller)或是顯示(view)的檔案。
-CodeIgniter uses a front controller so paths are always relative to the main site index.</p>
+<p class="important"><strong>注意:</strong> 檔案路徑是相對於網站根目錄 index.php 檔案，而不是相對路徑於您的控制器(controller)或是顯示(view)的檔案。
+CodeIgniter 所使用的前端控制器都是相對於根目錄的 index 檔案。</p>
 
 <p>If your server is running an open_basedir restriction this function
 might not work if you are trying to access a file above the calling script.</p>
 
-<h2>write_file('<var>path</var>'，<kbd>$data</kbd>)</h2>
+<h2>write_file('<var>path</var>', <kbd>$data</kbd>)</h2>
 
 <p>Writes data to the file specified in the path.  If the file does not exist the function will create it. 參考範例:</p>
 
 <code>
 $data = 'Some file data';<br />
 <br />
-if ( ! write_file('./path/to/file.php'，$data))<br />
+if ( ! write_file('./path/to/file.php', $data))<br />
 {<br />
 &nbsp;&nbsp;&nbsp;&nbsp; echo 'Unable to write the file';<br />
 }<br />
@@ -99,7 +99,7 @@ else<br />
 
 <p>You can optionally set the write mode via the third parameter:</p>
 
-<code>write_file('./path/to/file.php'，$data，<var>'r+'</var>);</code>
+<code>write_file('./path/to/file.php', $data，<var>'r+'</var>);</code>
 
 <p>The default mode is <kbd>wb</kbd>.  Please see the <a href="http://php.net/fopen">PHP user guide</a> for mode options.</p>
 
@@ -116,7 +116,7 @@ CodeIgniter uses a front controller so paths are always relative to the main sit
 
 <p>If the second parameter is set to <kbd>true</kbd>，any directories contained within the supplied root path will be deleted as well. 參考範例:</p>
 
-<code>delete_files('./path/to/directory/'，TRUE);</code>
+<code>delete_files('./path/to/directory/', TRUE);</code>
 
 <p class="important"><strong>注意:</strong> The files must be writable or owned by the system in order to be deleted.</p>
 
